# RoboticAsteroidRedirect

./: .gitignore  CMakeLists.txt  README.md  constants.h  electric_ast4.txt  electric_ast5.txt  electric_ast6.txt  electric_radii.txt  electricscript.cpp  examplescript.cpp  functions.h  graphing.sh  main.cpp  masscalc.h  orbmech.h  orbmeche.h  testplot.cpp
lib/: example1.cpp  make.sh  pbPlots.cpp  supportLib.cpp
test/: catch_amalgamated.cpp  catch_amalgamated.hpp  test.cpp  testing.sh
